added an interface PaymentRepository in the reporitory file, added a new application and added DateTimeFormat in the entity classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=FinancialSystem
+spring:
+  application:
+    name=sgep
+  data:
+    mongodb:
+      uri:mongodb://localhost:37017/
