--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,13 @@ services:
     ports:
       - "37017:27017"
     restart: unless-stopped
-    networks:
-      pc-environment-network:
-        aliases:
-          - mongo.picpay.cpxp
-networks:
-  pc-environment-network:
-    external: true
+#    networks:
+#      pc-environment-network:
+#        aliases:
+#          - mongo.picpay.cpxp
+#networks:
+#  pc-environment-network:
+#    external: true
 volumes:
   automatic_debit_mongo:
     driver: "local"
