fixed the name of the database in application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,4 +3,4 @@
       name=FinancialSystem
     data:
       mongodb:
-        uri: mongodb://localhost:37017/financial-system
+        uri: mongodb://localhost:37017/financial_system
