fixed the application.yml and added the annotation @Repository in all interfaces in repository

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
   spring:
     application:
-      name=FinancialSystem
+      name: FinancialSystem
     data:
       mongodb:
-        uri: mongodb://localhost:37017/financial_system
+        uri: mongodb://localhost:37017/financial-system
