added springdoc in application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,20 @@
     data:
       mongodb:
         uri: mongodb://localhost:37017/financial-system
+
+  springdoc:
+    api-docs:
+      path: /api-docs
+      resolve-schema-properties: true
+    override-with-generic-response: false
+    default-produces-media-type: application/json
+    default-consumes-media-type: application/json
+    paths-to-exclude: /**/api-docs,/swagger-resources/**
+    writer-with-order-by-keys: true
+    swagger-ui:
+      path: /
+      tags-sorter: alpha
+      operations-sorter: alpha
+      doc-expansion: none
+    packages-to-scan:
+      - com.example.FinancialSystem.entryPoint.controller
