fixing the application configurations and the worker package

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,16 @@
         definition: createLoanEvent
       stream:
         bindings:
-          createLoanEvent-in-0:
-            destination: sgep-loan-events
+          createContractEvent-in-0:
+            destination: sgep-contract-events
+            group: sgep-contract-events-group
+            content-type: application/json
+          createCustomerEvent-in-0:
+            destination: sgep-customer-events
+            group: sgep-loan-events-group
+            content-type: application/json
+          createPaymentEvent-in-0:
+            destination: sgep-payment-events
             group: sgep-loan-events-group
             content-type: application/json
         binders:
