fixing the application

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,10 @@
       name: FinancialSystem
     cloud:
       function:
-        definition: createLoanEvent
+        definition:
+          createContractEvent;
+          createCustomerEvent;
+          createPaymentEvent;
       stream:
         bindings:
           createContractEvent-in-0:
